--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,11 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 include_directories(include)
 
 add_executable(main src/main.cpp)
+
+# TESTING FRAMEWORK
+add_subdirectory(third_party/googletest)
+include_directories(third_party/googletest/googletest/include)
+
+enable_testing()
+add_executable(unit_test tests/unit_tests.cpp)
+target_link_libraries(unit_test gtest gtest_main)
